AC_INIT([rcdd])
AC_CONFIG_SRCDIR([DESCRIPTION])

PKG_CPPFLAGS=$CPPFLAGS
PKG_CFLAGS=$CFLAGS
PKG_LDFLAGS=$LDFLAGS

AC_CHECK_LIB(gmp, __gmpz_init, ,
    [AC_MSG_ERROR([GNU MP not found, see README])])
AC_CHECK_LIB(cddgmp, dd_DDMatrix2Poly2, ,
    [AC_MSG_ERROR([cddgmp not found or built with C++, see README])])

AC_SUBST(PKG_CPPFLAGS)
AC_SUBST(PKG_CFLAGS)
AC_SUBST(PKG_LDFLAGS)

AC_CONFIG_FILES(src/Makevars)
AC_OUTPUT
